--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="彩虹公益社"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,7 @@
     -->
     <title>彩虹公益社</title>
   </head>
-  <body>
+  <body style="position: absolute;height: 100%;width: 100%;">
     <noscript>彩虹公益社</noscript>
     <div id="root"></div>
     <!--
