--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="彩虹公益社"
+      content="天水公益"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>彩虹公益社</title>
+    <title>天水公益</title>
   </head>
   <body style="position: absolute;height: 100%;width: 100%;">
-    <noscript>彩虹公益社</noscript>
+    <noscript>天水公益</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
